# calibration-tuning

./: .gitignore  Dockerfile  README.md  autotorchrun  deepspeed  deepspeed_stage3_lora_no_decay_bf16.json  environment.yml  pyproject.toml  requirements-base.txt  requirements-dev.txt  requirements.txt  sampling.sh  setup.py
experiments/: ambiguous_generate.py  calibration_tune.py  classifier_tune.py  cluster.py  embedding_tune.py  evaluate.py  evaluate.sh  evaluate_all.py  evaluate_gen.py  evaluate_logits.py  evaluate_mmlu.py  feature_classifier_evaluate.py  feature_classifier_train.py  fine_tune.py  finetune.py  finetune.sh  generate.py  generate_features.py  play.py  prompttune.py  publish.py  temperature_scale.py  train_embedding_only.py  ttune.py  uncertainty_tune.py
llm/: accelerate.py  logging.py  random.py
llm/datasets/: __init__.py  alpaca.py  arc.py  bb.py  bbh.py  boolq.py  combined.py  commonsense_qa.py  cosmos_qa.py  data_collator.py  gsm8k.py  hellaswag.py  llm_data_utils.py  llm_utils.py  llm_utils_oe.py  math_qa.py  mmlu.py  mmlu_oe_offline.py  modiste.py  nli.py  obqa.py  offline.py  piqa.py  registry.py  sciq.py  siqa.py  story_cloze.py  super_glue.py  (+7 more)
notebooks/: .gitignore  all_plots.ipynb  cleanup_offline.ipynb  eval.ipynb  eval_mmlu.ipynb  eval_mmlu_ct_oe.ipynb  eval_mmlu_oe.ipynb  eval_mmlu_oe_verb1s.ipynb  eval_mmlu_oe_verb1s2g.ipynb  mmlu_pro.ipynb  oe_sampling.ipynb  user-study.ipynb  viz_conf_distribution.ipynb  viz_features.ipynb  viz_imp_oe.ipynb  viz_mmlu.ipynb
scripts/: classifier_head.sh  evaluate.sh  evaluate_gen.sh  finetune.sh
(+346 files in other folders)
